--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -1,5 +1,5 @@
 body {
-  background: url(photo0000-0331.jpg) no-repeat center center fixed #C0C0C0;
+  background: linear-gradient(to top, rgba(206, 240, 34, 0.7) 0%, rgba(151, 217, 225, 0.7) 100%),url(photo0000-0331.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
