--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -2,6 +2,9 @@
   height: calc(100vh - 95px);
   width:50%;
   margin-right: auto;
+  float: left;
+  border-right:dashed 4px rgb(244, 244, 241);
+  border-bottom:dashed 4px rgb(244, 244, 241);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   &__message{
     padding: 30px;
